# sd-drone

./: .gitignore  .gitmodules  BT_IO_output.ino  Config.in  GPIO.py  README.md  client_noBT.py  cmd_server.py  drone_client.py  external.desc  external.mk
carrier-board/: carrier-board.kicad_pcb  carrier-board.kicad_prl  carrier-board.kicad_pro  carrier-board.kicad_sch  fp-info-cache
carrier-board/fabrication/: carrier-board-B_Cu.gbr  carrier-board-B_Mask.gbr  carrier-board-B_Paste.gbr  carrier-board-B_Silkscreen.gbr  carrier-board-Edge_Cuts.gbr  carrier-board-F_Cu.gbr  carrier-board-F_Mask.gbr  carrier-board-F_Paste.gbr  carrier-board-F_Silkscreen.gbr  carrier-board-job.gbrjob  carrier-board.drl
modules/attitude-estimation/: .mxproject  Makefile  attitude-estimation.ioc
modules/attitude-estimation/Core/Inc/: ekf.h
modules/attitude-estimation/Core/Src/: ekf.c  main.c  stm32l4xx_hal_msp.c
modules/attitude-estimation/Drivers/BNO_Drivers/include/: BNO_055_Drivers.h
modules/attitude-estimation/Drivers/BNO_Drivers/src/: BNO_055_Drivers.c
modules/attitude-viz/: README.md  qmath.py  requirements.txt  sread.py  visualization.py
modules/imu-ekf/: .mxproject  Makefile  imu-ekf.ioc
modules/imu-ekf/Core/Inc/: BNO_055_Drivers.h
modules/imu-ekf/Core/Src/: #main.c#  BNO_055_Drivers.c  main.c  stm32f4xx_hal_msp.c
modules/offboard/: CMakeLists.txt
modules/offboard/include/: DroneInterface.hh  NetworkInterface.hh  Socket.hh  System.hh  Utillities.hh
modules/offboard/scripts/: client.py  sread.py
modules/offboard/src/: DroneInterface.cc  Main.cc  NetworkInterface.cc  Offboard.cc  Socket.c  Socket.cc  System.cc  Utillities.cc  client.cc  server.cc  telemtry.cc
modules/offboard/tests/: arm_drone.cc  takeoff_land.cc
modules/package/offboard/: offboard.mk
modules/rpi-broot/configs/: defconfig
modules/rpi-broot/users/: makeusers.txt
modules/rpi_client/: bno055.py  button.py  client.py  serial_read.py
modules/stm-ekf/: .mxproject  Makefile  stm-ekf.ioc
modules/stm-ekf/Core/Inc/: ekf.h
modules/stm-ekf/Core/Src/: ekf.c  main.c  stm32f1xx_hal_msp.c
modules/stm-ekf/Drivers/BNO_Drivers/include/: BNO_055_Drivers.h
modules/stm-ekf/Drivers/BNO_Drivers/src/: BNO_055_Drivers.c
